fix/text-overflow profile

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,15 +1,16 @@
 .profile__edit-button {
     width: 24px;
     height: 24px;
+    padding: 0;
     border: 1px #fff solid;
     background-color: #000;
     background-image: url(../../../images/pen.svg);
     background-repeat: no-repeat;
-    background-position:center;
+    background-position: center;
     grid-area: edit-button;
     transition: opacity .6s;
     display: flex;
-    align-self: baseline;
+    align-self: center;
 }
 
 .profile__edit-button:hover {
@@ -21,6 +22,5 @@
     .profile__edit-button {
         width: 18px;
         height: 18px;
-        padding: 4px;
     }
 }
