--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,4 +1,5 @@
 .profile__job {
+    max-width: 294px;
     margin: 0;
     font-style: normal;
     font-weight: 400;
